fix formatting of try-with-resources in CgroupSubsystemController.java